--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,6 +20,7 @@ body {
     background-color: var(--theme-100);
     color: var(--theme-inverted-100);
     height: 100vh;
+    overflow: hidden;
 }
 
 #root {
